Build failures fixed

--- a/ConsoleAppNETCOre2.0/ConsoleAppNETCore2.0.csproj
+++ b/ConsoleAppNETCOre2.0/ConsoleAppNETCore2.0.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Simple.Test.Package\My.Simple.Utilities.Project.csproj" />
+    <ProjectReference Include="..\My.Simple.Utilities.Project\My.Simple.Utilities.Project.csproj" />
   </ItemGroup>
 
 </Project>
